feat(admin): get all users conditionally
